--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,2 @@
-RewriteEngine On
-
-# Ha a megadott útvonal nem egy fájl vagy mappa
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-
-# Az összes lekérést a shortener.php fájlhoz irányítja
-RewriteRule ^([^/]+)$ shortener.php?code=$1 [L]
- 
+RewriteEngine on
+RewriteRule ^([a-z0-9]{3})$ shortener.php?code=$1 [L] 
